--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,25 +3,32 @@
         {
             "type": "cppbuild",
             "label": "C/C++: gcc arquivo de build ativo",
-            "command": "/usr/bin/gcc",
-            "args": [
+            "command": "gcc",
+            "args": 
+            [
                 "-fdiagnostics-color=always",
                 "-g",
                 "${file}",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
-            "options": {
-                "cwd": "${fileDirname}"
+            "options": 
+            {
+                "env": 
+                {
+                    "PATH": "C:\\msys64\\mingw64\\bin;${env:PATH}"
+                }
             },
-            "problemMatcher": [
+            "problemMatcher":
+            [
                 "$gcc"
             ],
-            "group": {
+            "group":
+            {
                 "kind": "build",
                 "isDefault": true
             },
-            "detail": "Tarefa gerada pelo Depurador."
+            "detail": "Compilação usando GCC do MSYS2"
         }
     ],
     "version": "2.0.0"
